--- a/index.html
+++ b/index.html
@@ -1,20 +1,108 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-	<meta charset="UTF-8">
-	<title>Puissance 4</title>
-	<link rel="stylesheet" href="CSS/style.css">
-</head>
-<body>
-	<header>
-		
-	</header>
-	<main>
-		
-	</main>
-	<footer>
-		
-	</footer>
-	<script type="text/javascript" language="javascript" src="JS/script.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Puissance 4</title>
+		<link rel="stylesheet" href="CSS/style.css">
+	</head>
+	<body>
+		<header>
+			<h1>Puissance 4</h1>
+			<div id="play"></div>
+			<div id="choose">
+				<p id="player">Joueur 1</p>
+				<img src="IMG/abra.svg" class="discChoose">
+				<img src="IMG/bellsprout.svg" class="discChoose">
+				<img src="IMG/bullbasaur.svg" class="discChoose">
+				<img src="IMG/caterpie.svg" class="discChoose">
+				<img src="IMG/charmander.svg" class="discChoose">
+				<img src="IMG/dratini.svg" class="discChoose">
+				<img src="IMG/eevee.svg" class="discChoose">
+				<img src="IMG/jigglypuff.svg" class="discChoose">
+				<img src="IMG/mankey.svg" class="discChoose">
+				<img src="IMG/meowth.svg" class="discChoose">
+				<img src="IMG/mew.svg" class="discChoose">
+				<img src="IMG/pidgey.svg" class="discChoose">
+				<img src="IMG/pikachu.svg" class="discChoose">
+				<img src="IMG/psyduck.svg" class="discChoose">
+				<img src="IMG/rattata.svg" class="discChoose">
+				<img src="IMG/snorlax.svg" class="discChoose">
+				<img src="IMG/squirtle.svg" class="discChoose">
+				<img src="IMG/venonat.svg" class="discChoose">
+				<img src="IMG/weedle.svg" class="discChoose">
+				<img src="IMG/zubat.svg" class="discChoose">
+			</div>
+		</header>
+		<main>
+			<table>
+				<tr>
+				    <td></td>
+				    <td></td> 
+				    <td></td>
+				    <td></td>
+				    <td></td> 
+				    <td></td>
+				    <td></td>
+				</tr>
+				<tr>
+				    <td></td>
+				    <td></td> 
+				    <td></td>
+				    <td></td>
+				    <td></td> 
+				    <td></td>
+				    <td></td>
+				</tr>
+				<tr>
+				    <td></td>
+				    <td></td> 
+				    <td></td>
+				    <td></td>
+				    <td></td> 
+				    <td></td>
+				    <td></td>
+				</tr>
+				<tr>
+				    <td></td>
+				    <td></td> 
+				    <td></td>
+				    <td></td>
+				    <td></td> 
+				    <td></td>
+				    <td></td>
+				</tr>
+				<tr>
+				    <td></td>
+				    <td></td> 
+				    <td></td>
+				    <td></td>
+				    <td></td> 
+				    <td></td>
+				    <td></td>
+				</tr>
+				<tr>
+				    <td></td>
+				    <td></td> 
+				    <td></td>
+				    <td></td>
+				    <td></td> 
+				    <td></td>
+				    <td></td>
+				</tr>
+				<tr>
+				    <td></td>
+				    <td></td> 
+				    <td></td>
+				    <td></td>
+				    <td></td> 
+				    <td></td>
+				    <td></td>
+				</tr>
+			</table>
+		</main>
+		<footer>
+			
+		</footer>
+		<script type="text/javascript" language="javascript" src="JS/script.js"></script>
+	</body>
 </html>
