--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 	<body>
 		<header>
 			<h1>Puissance 4</h1>
-			<div id="play"></div>
+			<p id="play">Play</p>
 			<div id="choose">
-				<p id="player">Joueur 1</p>
+				<div id="players">
+					<p id="player">Joueur 1</p>
+				</div>
 				<img src="IMG/abra.svg" class="discChoose">
 				<img src="IMG/bellsprout.svg" class="discChoose">
 				<img src="IMG/bullbasaur.svg" class="discChoose">
