resolution en cour

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				</tr>
 			</table>
 		</main>
-		<footer>
+		<footer id="foot">
 			
 		</footer>
 		<script type="text/javascript" language="javascript" src="JS/script.js"></script>
