--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<meta charset="UTF-8">
 		<title>Puissance 4</title>
 		<link rel="stylesheet" href="CSS/style.css">
+		<audio controls id="myAudio">
+			  <source src="SOUND/pokeBattle.mp3" type="audio/mpeg">
+			Your browser does not support the audio element.
+		</audio>
 	</head>
 	<body>
 		<header>
@@ -36,6 +40,58 @@
 			</div>
 		</header>
 		<main>
+			<div id="encounter">
+				<div id="e1"></div>
+				<div id="e2"></div>
+				<div id="e3"></div>
+				<div id="e4"></div>
+				<div id="e5"></div>
+				<div id="e6"></div>
+				<div id="e7"></div>
+				<div id="e8"></div>
+				<div id="e9"></div>
+				<div id="e10"></div>
+				<div id="e11"></div>
+				<div id="e12"></div>
+				<div id="e13"></div>
+				<div id="e14"></div>
+				<div id="e15"></div>
+				<div id="e16"></div>
+				<div id="e17"></div>
+				<div id="e18"></div>
+				<div id="e19"></div>
+				<div id="e20"></div>
+				<div id="e21"></div>
+				<div id="e22"></div>
+				<div id="e23"></div>
+				<div id="e24"></div>
+				<div id="e25"></div>
+				<div id="e26"></div>
+				<div id="e27"></div>
+				<div id="e28"></div>
+				<div id="e29"></div>
+				<div id="e30"></div>
+				<div id="e31"></div>
+				<div id="e32"></div>
+				<div id="e33"></div>
+				<div id="e34"></div>
+				<div id="e35"></div>
+				<div id="e36"></div>
+				<div id="e37"></div>
+				<div id="e38"></div>
+				<div id="e39"></div>
+				<div id="e40"></div>
+				<div id="e41"></div>
+				<div id="e42"></div>
+				<div id="e43"></div>
+				<div id="e44"></div>
+				<div id="e45"></div>
+				<div id="e46"></div>
+				<div id="e47"></div>
+				<div id="e48"></div>
+				<div id="e49"></div>
+				<div id="e50"></div>
+			</div>
 			<table>
 				<tr>
 				    <td></td>
