--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</audio>
 				<img src="IMG/bullbasaur.svg" class="discChoose">
 				<audio controls class="pokeSound">
-					  <source src="SOUND/bullbasaur.mp3" type="audio/mpeg">
+					  <source src="SOUND/bulbasaur.mp3" type="audio/mpeg">
 					Your browser does not support the audio element.
 				</audio>
 				<img src="IMG/caterpie.svg" class="discChoose">
@@ -125,7 +125,7 @@
 		</header>
 		<main>
 			<div class="divPlayers">
-				<div class="shadowPlayers"></div>
+				<div class="shadowPlayers" id="shadowOne"></div>
 				<div id="playerOne">
 					<div id="playerOneImg"></div>
 					<p>Joueur 1</p>
@@ -249,7 +249,7 @@
 				</div>
 			</div>
 			<div class="divPlayers">
-				<div class="shadowPlayers"></div>
+				<div class="shadowPlayers" id="shadowTwo"></div>
 				<div id="playerTwo">
 					<div id="playerTwoImg"></div>
 					<p>Joueur 2</p>
