--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 				<div id="e50"></div>
 			</div>
 			<div id="divDisc">
-				<div>
+				<div id="col1" class="tableCol">
 					<div id="d1"></div>
 					<div id="d2"></div>
 					<div id="d3"></div>
@@ -193,7 +193,7 @@
 					<div id="d6"></div>
 					<div id="d7"></div>
 				</div>
-				<div>
+				<div id="col2" class="tableCol">
 					<div id="d8"></div>
 					<div id="d9"></div>
 					<div id="d10"></div>
@@ -202,7 +202,7 @@
 					<div id="d13"></div>
 					<div id="d14"></div>
 				</div>
-				<div>
+				<div id="col3" class="tableCol">
 					<div id="d15"></div>
 					<div id="d16"></div>
 					<div id="d17"></div>
@@ -211,7 +211,7 @@
 					<div id="d20"></div>
 					<div id="d21"></div>
 				</div>
-				<div>
+				<div id="col4" class="tableCol">
 					<div id="d22"></div>
 					<div id="d23"></div>
 					<div id="d24"></div>
@@ -220,7 +220,7 @@
 					<div id="d27"></div>
 					<div id="d28"></div>
 				</div>
-				<div>
+				<div id="col5" class="tableCol">
 					<div id="d29"></div>
 					<div id="d30"></div>
 					<div id="d31"></div>
@@ -229,7 +229,7 @@
 					<div id="d34"></div>
 					<div id="d35"></div>
 				</div>
-				<div>
+				<div id="col6" class="tableCol">
 					<div id="d36"></div>
 					<div id="d37"></div>
 					<div id="d38"></div>
@@ -238,7 +238,7 @@
 					<div id="d41"></div>
 					<div id="d42"></div>
 				</div>
-				<div>
+				<div id="col7" class="tableCol">
 					<div id="d43"></div>
 					<div id="d44"></div>
 					<div id="d45"></div>
