--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
 					  <source src="SOUND/zubat.mp3" type="audio/mpeg">
 					Your browser does not support the audio element.
 				</audio>
+				<audio controls id="select">
+					  <source src="SOUND/select.mp3" type="audio/mpeg">
+					Your browser does not support the audio element.
+				</audio>
 			</div>
 		</header>
 		<main>
