--- a/index.html
+++ b/index.html
@@ -21,110 +21,116 @@
 				<div id="players">
 					<p id="player">Joueur 1</p>
 				</div>
-				<img src="IMG/abra.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/abra.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/bellsprout.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/bellsprout.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/bullbasaur.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/bulbasaur.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/caterpie.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/caterpie.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/charmander.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/charmander.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/dratini.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/dratini.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/eevee.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/eevee.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/jigglypuff.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/jigglypuff.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/mankey.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/mankey.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/meowth.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/meowth.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/mew.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/mew.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/pidgey.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/pidgey.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/pikachu.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/pikachu.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/psyduck.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/psyduck.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/rattata.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/rattata.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/snorlax.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/snorlax.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/squirtle.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/squirtle.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/venonat.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/venonat.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/weedle.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/weedle.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<img src="IMG/zubat.svg" class="discChoose">
-				<audio controls class="pokeSound">
-					  <source src="SOUND/zubat.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
-				<audio controls id="select">
-					  <source src="SOUND/select.mp3" type="audio/mpeg">
-					Your browser does not support the audio element.
-				</audio>
+				<div id="pokemons">
+					<img src="IMG/abra.svg" class="discChoose">
+					<audio controls id="chooseSound">
+						  <source src="SOUND/choose.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<audio controls class="pokeSound">
+						  <source src="SOUND/abra.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/bellsprout.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/bellsprout.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/bullbasaur.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/bulbasaur.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/caterpie.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/caterpie.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/charmander.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/charmander.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/dratini.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/dratini.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/eevee.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/eevee.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/jigglypuff.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/jigglypuff.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/mankey.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/mankey.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/meowth.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/meowth.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/mew.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/mew.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/pidgey.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/pidgey.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/pikachu.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/pikachu.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/psyduck.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/psyduck.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/rattata.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/rattata.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/snorlax.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/snorlax.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/squirtle.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/squirtle.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/venonat.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/venonat.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/weedle.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/weedle.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<img src="IMG/zubat.svg" class="discChoose">
+					<audio controls class="pokeSound">
+						  <source src="SOUND/zubat.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+					<audio controls id="select">
+						  <source src="SOUND/select.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+					</audio>
+				</div>
 			</div>
 		</header>
 		<main>
@@ -259,6 +265,7 @@
 					<p>Joueur 2</p>
 				</div>
 			</div>
+			<div id="pause"></div>
 		</main>
 		<script type="text/javascript" language="javascript" src="JS/script.js"></script>
 	</body>
