--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 			<h1>Puissance 4</h1>
 			<p id="play">Play</p>
 			<div id="choose">
-				<div id="players">
 					<p id="player">Joueur 1</p>
-				</div>
 				<div id="pokemons">
 					<img src="IMG/abra.svg" class="discChoose">
 					<audio controls id="chooseSound">
@@ -134,6 +132,20 @@
 			</div>
 		</header>
 		<main>
+			<div id="result">
+				<audio controls id="victory">
+					<source src="SOUND/victory.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+				</audio>
+				<div class="resu">
+					<div id="win"></div>
+					<p class="resuP">joueur 1</p>
+				</div>
+				<div class="resu">
+					<div id="lose"></div>
+					<p class="resuP">joueur 2</p>
+				</div>
+			</div>
 			<div class="divPlayers">
 				<div class="shadowPlayers" id="shadowOne"></div>
 				<div id="playerOne">
