--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 				<div id="e49"></div>
 				<div id="e50"></div>
 			</div>
+			<div id="divDiscModule"></div>
 			<div id="divDisc">
 				<div id="col1" class="tableCol">
 					<div id="d1"></div>
