nb case programmable

--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
 				<div id="e49"></div>
 				<div id="e50"></div>
 			</div>
-			<div id="divDiscModule"></div>
+<!-- 			<div id="divDiscModule"></div> -->
 			<div id="divDisc">
-				<div id="col1" class="tableCol">
+				<!-- <div id="col1" class="tableCol">
 					<div id="d1"></div>
 					<div id="d2"></div>
 					<div id="d3"></div>
@@ -269,7 +269,7 @@
 					<div id="d47"></div>
 					<div id="d48"></div>
 					<div id="d49"></div>
-				</div>
+				</div> -->
 			</div>
 			<div class="divPlayers">
 				<div class="shadowPlayers" id="shadowTwo"></div>
