--- a/index.html
+++ b/index.html
@@ -205,71 +205,14 @@
 				<div id="e49"></div>
 				<div id="e50"></div>
 			</div>
-<!-- 			<div id="divDiscModule"></div> -->
 			<div id="divDisc">
-				<!-- <div id="col1" class="tableCol">
-					<div id="d1"></div>
-					<div id="d2"></div>
-					<div id="d3"></div>
-					<div id="d4"></div>
-					<div id="d5"></div>
-					<div id="d6"></div>
-					<div id="d7"></div>
-				</div>
-				<div id="col2" class="tableCol">
-					<div id="d8"></div>
-					<div id="d9"></div>
-					<div id="d10"></div>
-					<div id="d11"></div>
-					<div id="d12"></div>
-					<div id="d13"></div>
-					<div id="d14"></div>
-				</div>
-				<div id="col3" class="tableCol">
-					<div id="d15"></div>
-					<div id="d16"></div>
-					<div id="d17"></div>
-					<div id="d18"></div>
-					<div id="d19"></div>
-					<div id="d20"></div>
-					<div id="d21"></div>
-				</div>
-				<div id="col4" class="tableCol">
-					<div id="d22"></div>
-					<div id="d23"></div>
-					<div id="d24"></div>
-					<div id="d25"></div>
-					<div id="d26"></div>
-					<div id="d27"></div>
-					<div id="d28"></div>
-				</div>
-				<div id="col5" class="tableCol">
-					<div id="d29"></div>
-					<div id="d30"></div>
-					<div id="d31"></div>
-					<div id="d32"></div>
-					<div id="d33"></div>
-					<div id="d34"></div>
-					<div id="d35"></div>
-				</div>
-				<div id="col6" class="tableCol">
-					<div id="d36"></div>
-					<div id="d37"></div>
-					<div id="d38"></div>
-					<div id="d39"></div>
-					<div id="d40"></div>
-					<div id="d41"></div>
-					<div id="d42"></div>
-				</div>
-				<div id="col7" class="tableCol">
-					<div id="d43"></div>
-					<div id="d44"></div>
-					<div id="d45"></div>
-					<div id="d46"></div>
-					<div id="d47"></div>
-					<div id="d48"></div>
-					<div id="d49"></div>
-				</div> -->
+			</div>
+			<div id="egal">
+				<audio controls id="matchNull">
+					<source src="SOUND/matchNull.mp3" type="audio/mpeg">
+						Your browser does not support the audio element.
+				</audio>
+				<p>Match Nul</p>
 			</div>
 			<div class="divPlayers">
 				<div class="shadowPlayers" id="shadowTwo"></div>
