reset in progress

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
 				<div id="playerOne">
 					<div id="playerOneImg"></div>
 					<p>Joueur 1</p>
+					<p class="score">0</p>
 				</div>
 			</div>
 			<div id="encounter">
@@ -219,9 +220,13 @@
 				<div id="playerTwo">
 					<div id="playerTwoImg"></div>
 					<p>Joueur 2</p>
+					<p class="score">0</p>
 				</div>
 			</div>
 			<div id="pause"></div>
+			<div id="replay">
+				<div id="replayButton"><p>Replay</p></div>
+			</div>
 		</main>
 		<script type="text/javascript" language="javascript" src="JS/script.js"></script>
 	</body>
