--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<title>Puissance 4</title>
 		<link rel="stylesheet" href="CSS/style.css">
-		<audio controls id="opening" autoplay="true" loop="true">
+		<audio controls id="opening" loop="true">
 			<source src="SOUND/opening.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
-		<audio controls id="pokeBattle">
+		<audio controls id="pokeBattle" loop="true">
 			<source src="SOUND/pokeBattle.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
@@ -20,11 +20,11 @@
 			<div id="choose">
 					<p id="player">Joueur 1</p>
 				<div id="pokemons">
-					<img src="IMG/abra.svg" class="discChoose">
-					<audio controls id="chooseSound">
+					<audio controls id="chooseSound" loop="true">
 						  <source src="SOUND/choose.mp3" type="audio/mpeg">
 						Your browser does not support the audio element.
 					</audio>
+					<img src="IMG/abra.svg" class="discChoose">
 					<audio controls class="pokeSound">
 						  <source src="SOUND/abra.mp3" type="audio/mpeg">
 						Your browser does not support the audio element.
@@ -131,9 +131,9 @@
 				</div>
 			</div>
 		</header>
-		<main>
+		<main id="main">
 			<div id="result">
-				<audio controls id="victory">
+				<audio controls id="victory" loop="true">
 					<source src="SOUND/victory.mp3" type="audio/mpeg">
 						Your browser does not support the audio element.
 				</audio>
@@ -209,7 +209,7 @@
 			<div id="divDisc">
 			</div>
 			<div id="egal">
-				<audio controls id="matchNull">
+				<audio controls id="matchNull" loop="true">
 					<source src="SOUND/matchNull.mp3" type="audio/mpeg">
 						Your browser does not support the audio element.
 				</audio>
